--- a/source/Localization/es_ES.xaml
+++ b/source/Localization/es_ES.xaml
@@ -1,44 +1,77 @@
 ﻿<?xml version="1.0"?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
+    <sys:String x:Key="LOCSuccessStoryProgress">Progreso</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEarned">Ganados</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryManualAchievements">Logros Manuales</sys:String>
+    
+    <sys:String x:Key="LOCSuccessStoryHiddenTrophy">Hidden Trophy</sys:String>
+    
     <!-- MainView -->
 
     <sys:String x:Key="LOCSuccessStory">Success Story</sys:String>
     <sys:String x:Key="LOCSuccessStoryAchievements">Logros</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRetroAchievements">Logros Retro</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryViewGames">Ver los logros de juegos</sys:String>
     <sys:String x:Key="LOCSuccessStoryViewGame">Ver los logros del juego</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryIgnored">Ignored the game</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotIgnored">Not Ignored the game</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamPrivate">El perfil de Steam no es público</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamDisabled">Steam está activado en SuccessStory pero la extensión de la biblioteca ha sido deshabilitada en Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamBadConfig">Steam no se ha configurado correctamente en la configuración</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsGogDisabled">GOG está activado en SuccessStory pero la extensión de la biblioteca ha sido desactivada en Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsGogNoAuthenticate">El usuario de GOG no está autenticado</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsPsnDisabled">PSN is enabled in SuccessStory but the library extension has been disabled in Playnite</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsPsnNoAuthenticate">PSN user is not authenticated</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsOriginDisabled">Origin está habilitado en SuccessStory pero la extensión de la biblioteca ha sido desactivada en Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsOriginNoAuthenticate">El usuario de Origin no está autenticado</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsXboxDisabled">Xbox está activado en SuccessStory pero la extensión de la biblioteca ha sido deshabilitada en Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsXboxNotAuthenticate">El usuario de Xbox no está autenticado</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsRetroAchievementsBadConfig">RetroAchievements no se han configurado correctamente en la configuración</sys:String>
-    <sys:String x:Key="LOCSuccessStoryNotificationsRpcs3BadConfig">Rpcs3 has not been correctly configured in settings</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsRpcs3BadConfig">RPCS3 no se ha configurado correctamente en la configuración</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetDisabled">Battle.net está habilitado en SuccessStory pero la extensión de la biblioteca ha sido desactivada en Playnite</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetNoAuthenticate">El usuario de Battle.net no está autenticado</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetNoAuthenticateOverwatch">Battle.net Overwatch user is not authenticated</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetNoAuthenticateSc2">Battle.net StarCraft II user is not authenticated</sys:String>
 
+    <!-- SuccessStoreGameSelection -->
+
+    <sys:String x:Key="LOCSuccessStoryAchievementsCount">Número de Logros</sys:String>
+    
+    
     <!-- SuccessStorySettingsView -->
 
     <sys:String x:Key="LOCSuccessStoryProgressBar">Procesando, Por Favor Espere...</sys:String>
 
+    <sys:String x:Key="LOCSuccessStoryIgnoredGames">Ignored games</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryExophaseOnlyLocalised">Exophase (only to have localised achievements)</sys:String>
+
+    <sys:String x:Key="LOSuccessStoryAddTagDescription">Añadir una etiqueta a los juegos con el tiempo para desbloquear completamente</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryEnablePSN">Enable PSN achievements</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableSteam">Habilitar logros de Steam</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableGog">Habilitar logros de GOG</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableOrigin">Habilitar los logros de Origin</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableXbox">Habilitar logros de Xbox</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableRetroAchievements">Habilitar logros de RetroAchievements</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableRpcs3Achievements">Enable Rpcs3 achievements</sys:String>
-    
-    <sys:String x:Key="LOCSuccessStoryEnableRpcs3HomeFolder">Home user folder</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRpcs3Achievements">Habilitar logros de RPCS3</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableManualAchievements">Habilitar logros manuales</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableOverwatchAchievements">Habilitar Logros de Overwatch</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableSc2Achievements">Enable StarCraft II achievements</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Mostrar vista separada para los logros de RetroAchievements</sys:String>
+    <sys:String x:Key="LOCSuccessStorySteamNoApi">Desactivar el uso de la API (Usar cuando no tienes una clave API)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRpcs3HomeFolder">Carpeta de usuario</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryDatabase">Database</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Show separate view for RetroAchievements</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryDatabase">Base de datos</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Descargar datos de logros</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshData">Restablecer datos de logros</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshData">Refresh data</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetMissing">Descargar datos faltantes</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetDataRecent">Juegos recientes con datos faltantes</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecent">Juegos recientes</sys:String>
@@ -47,12 +80,15 @@
     <sys:String x:Key="LOCSuccessStoryGetDataInstalled">Juegos instalados con datos faltantes</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Juegos instalados</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Mostrar gráfico</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationViewItemWithProgressBar">Progresión con barra de progreso</sys:String>
+    
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Mostrar gráfico de logros</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievements">Mostrar lista de logros</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompact">Mostrar la lista compacta de logros</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowProgressBar">Mostrar barra de progreso de logros</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked">Mostrar resumen de logros desbloqueados</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactLocked">Mostrar resumen de logros bloqueados</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowUserStats">Show user game stats</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowUserStats">Mostrar estadísticas del juego de usuario</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptions">Opciones de gráfico</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptionsCountAbscissa">Número de días a mostrar en el gráfico</sys:String>
@@ -63,15 +99,21 @@
     <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowPercent">Mostrar porcentaje de progreso</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationListOptions">Opciones de la lista de logros</sys:String>
 
+    <sys:String x:Key="LOCSuccessStoryAchievementsCompactListOptions">Opciones de la lista compacta de logros</sys:String>
+    <sys:String x:Key="LOCSuccessStoryAchievementsCompactOptions">Resumen opciones de logros</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryIntegrationCompactPartialDisplayLastest">Mostrar el último logro desbloqueado</sys:String>
+
     <sys:String x:Key="LOCSuccessStoryViewsSettings">Vista de extensión</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableRaretyIndicator">Mostrar indicador de rareza en el logro</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableOneGameView">Only display the selected game with plugin actions</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRaretyIndicator">Mostrar indicador de rareza en los logros</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableOneGameView">Mostrar sólo los logros del juego seleccionado desde el menú del juego</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableAuto100PercentCompleted">Establece el juego automáticamente a &quot;Completado&quot; cuando todos los logros sean desbloqueados</sys:String>
     <sys:String x:Key="LOCSuccessStoryListGames">Lista de Juegos</sys:String>
     <sys:String x:Key="LOCSuccessStoryDefaultSorting">Clasificación predeterminada de la lista de juegos</sys:String>
     <sys:String x:Key="LOCSuccessStoryChartWithAllAchievements">Gráfico con todos los logros</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryListGamesFields">Campos de juego a mostrar:</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGamesIcon100Percent">Icono 100% Logros</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGamesIcon100Percent">Icono de 100% logros</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryIncludeHiddenGames">Mostrar logros de juegos ocultos</sys:String>
     <sys:String x:Key="LOCSuccessStoryAllUnlockedByMonth">Mostrar gráfico de logros por mes</sys:String>
@@ -90,14 +132,14 @@
     <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Restablece y descarga los logros de los juegos instalados. (Usar si hay algún problema con los logros)</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshAllDataToolTip" xml:space="preserve">Restablece y descarga los logros de todos los juegos. (Usar si hay algún problema con los logros)</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryEnableImageCache">Habilitar imágenes de logros en caché (experimental) *</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableImageCacheToolTip" xml:space="preserve">Proceso experimental de no bloqueo que puede aumentar un poco el uso de memoria sólo cuando se almacena en caché.
-Especialmente útil para los logros de Xbox con sus imágenes grandes que se reducen al almacenar en caché.</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableImageCache">Enable caching achievements images *</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableImageCacheToolTip" xml:space="preserve">Non-blocking process which can increase memory usage a bit when caching only.
+Especially useful for Xbox achievements with their larges images which are reduced when caching.</sys:String>
 
     <!-- SuccessStoryOneGameView -->
 
-    <sys:String x:Key="LOCSuccessStoryUserStats">User statistiques</sys:String>
-    
+    <sys:String x:Key="LOCSuccessStoryUserStats">Estadísticas de usuario</sys:String>
+
     <!-- SuccessStoryView -->
 
     <!-- UI -->
@@ -116,5 +158,15 @@ Especialmente útil para los logros de Xbox con sus imágenes grandes que se red
     <sys:String x:Key="LOCSuccessStoryGraphicTitle">Logros desbloqueados por mes</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitleSources">Logros desbloqueados por fuente</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitleDay">Logros desbloqueados por día</sys:String>
+
+    <!-- ListViewGames -->
+
+    <sys:String x:Key="LOCSsOverwatchQuickPlay">Partida rápida</sys:String>
+    <sys:String x:Key="LOCSsOverwatchCompetitivePlay">Juego competitivo</sys:String>
+
+    <sys:String x:Key="LOCSsOverwatchGamesWon">{0} Partidas ganadas</sys:String>
+    
+    <sys:String x:Key="LOCSsOverwatchTopHero">Top Héroe</sys:String>
+    <sys:String x:Key="LOCSsOverwatchCareerStats">Clase de Carrera</sys:String>
 
 </ResourceDictionary>
