--- a/source/Localization/fr_FR.xaml
+++ b/source/Localization/fr_FR.xaml
@@ -1,44 +1,77 @@
 ﻿<?xml version="1.0"?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
+    <sys:String x:Key="LOCSuccessStoryProgress">Progression</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEarned">Gagnés</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryManualAchievements">Accomplissements manuels</sys:String>
+    
+    <sys:String x:Key="LOCSuccessStoryHiddenTrophy">Hidden Trophy</sys:String>
+    
     <!-- MainView -->
 
     <sys:String x:Key="LOCSuccessStory">SuccessStory</sys:String>
     <sys:String x:Key="LOCSuccessStoryAchievements">Succès</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRetroAchievements">RetroAchievements</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryViewGames">Voir les succès des jeux</sys:String>
     <sys:String x:Key="LOCSuccessStoryViewGame">Voir les succès du jeu</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryIgnored">Ignored the game</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotIgnored">Not Ignored the game</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamPrivate">Profil Steam n'est pas public</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamDisabled">Steam est activé dans SuccessStory mais l'extension de la bibliothèque a été désactivée dans Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamBadConfig">Steam n'a pas été correctement configuré dans les paramètres</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsGogDisabled">GOG est activé dans SuccessStory mais l'extension de la bibliothèque a été désactivée dans Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsGogNoAuthenticate">Utilisateur GOG n'est pas connecté</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsPsnDisabled">PSN is enabled in SuccessStory but the library extension has been disabled in Playnite</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsPsnNoAuthenticate">PSN user is not authenticated</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsOriginDisabled">Origin est activé dans SuccessStory mais l'extension de la bibliothèque a été désactivée dans Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsOriginNoAuthenticate">Utilisateur Origin n'est pas connecté</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsXboxDisabled">Xbox est activé dans SuccessStory mais l'extension de la bibliothèque a été désactivée dans Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsXboxNotAuthenticate">Utilisateur Xbox non authentifié</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsRetroAchievementsBadConfig">RetroAchievements n'a pas été correctement configuré dans les paramètres</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsRpcs3BadConfig">RPCS3 n'a pas été correctement configuré dans les paramètres</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetDisabled">Battle.net est activé dans SuccessStory mais l'extension de bibliothèque a été désactivée dans Playnite</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetNoAuthenticate">L'utilisateur de Battle.net n'est pas authentifié</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetNoAuthenticateOverwatch">Battle.net Overwatch user is not authenticated</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetNoAuthenticateSc2">Battle.net StarCraft II user is not authenticated</sys:String>
 
+    <!-- SuccessStoreGameSelection -->
+
+    <sys:String x:Key="LOCSuccessStoryAchievementsCount">Nombre d'accomplissements</sys:String>
+    
+    
     <!-- SuccessStorySettingsView -->
 
     <sys:String x:Key="LOCSuccessStoryProgressBar">Traitement en cours, veuillez patienter...</sys:String>
 
+    <sys:String x:Key="LOCSuccessStoryIgnoredGames">Ignored games</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryExophaseOnlyLocalised">Exophase (only to have localised achievements)</sys:String>
+
+    <sys:String x:Key="LOSuccessStoryAddTagDescription">Ajouter un tag aux jeux avec le temps pour le déverrouillage complet</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryEnablePSN">Enable PSN achievements</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableSteam">Activer les succès Steam</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableGog">Activer les succès GOG</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableOrigin">Activer les succès Origin</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableXbox">Activer les succès Xbox</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableRetroAchievements">Activer les succès RetroAchievements</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableRpcs3Achievements">Activer les succès RPCS3</sys:String>
-    
+    <sys:String x:Key="LOCSuccessStoryEnableManualAchievements">Activer les succès manuels</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableOverwatchAchievements">Activer les accomplissements de Overwatch</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableSc2Achievements">Enable StarCraft II achievements</sys:String>
+
+    <sys:String x:Key="LOCSuccessStorySteamNoApi">Désactiver l'utilisation de l'API (à utiliser lorsque vous n'avez pas de clé API)</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableRpcs3HomeFolder">Dossier de l'utilisateur</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Afficher une vue séparée pour les succès RetroAchievements</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Show separate view for RetroAchievements</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryDatabase">Base de données</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Télécharger les succès</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshData">Réinitialiser les données</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshData">Refresh data</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetMissing">Télécharger les données manquantes</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetDataRecent">Jeux récents avec données manquantes</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecent">Jeux récents</sys:String>
@@ -47,31 +80,40 @@
     <sys:String x:Key="LOCSuccessStoryGetDataInstalled">Jeux installés avec données manquantes</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Jeux installés</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Afficher le graphique</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationViewItemWithProgressBar">Progrès avec une barre de progression</sys:String>
+    
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Afficher le graphique des succès</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievements">Afficher la liste des succès</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowProgressBar">Afficher la barre de progression</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompact">Afficher la liste compacte des succès</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowProgressBar">Afficher la barre de progression des succès</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked">Afficher le résumé des succès débloqués</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactLocked">Afficher le résumé des succès verrouillés</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowUserStats">Afficher les statistiques de jeu utilisateur</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowUserStats">Afficher les statistiques de jeu d'utilisateur</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptions">Options du graphique</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptionsCountAbscissa">Nombre de jours à afficher sur le graphique</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicShowLabels">Afficher les libellés sur l'axe horizontal</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicShowLabelsOrdinates">Afficher les libellés sur l'axe vertical</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarOptions">Options de la barre de progression</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowIndicator">Afficher le libellé de la progression de progression</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowIndicator">Afficher le libellé de la progression</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowPercent">Afficher le pourcentage</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationListOptions">Options de la liste des succès</sys:String>
 
+    <sys:String x:Key="LOCSuccessStoryAchievementsCompactListOptions">Options de la liste de succès compacte</sys:String>
+    <sys:String x:Key="LOCSuccessStoryAchievementsCompactOptions">Options des résumés de succès</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryIntegrationCompactPartialDisplayLastest">Montrer le dernier succès débloqué</sys:String>
+
     <sys:String x:Key="LOCSuccessStoryViewsSettings">Vue de l'extension</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableRaretyIndicator">Afficher l'indicateur de rareté</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableOneGameView">Afficher uniquement le jeu sélectionné dans le menu des jeux</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRaretyIndicator">Afficher l'indicateur de rareté sur les succès</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableOneGameView">Afficher uniquement les succès du jeu sélectionné dans le menu de jeu</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableAuto100PercentCompleted">Régler automatiquement le jeu sur &quot;Battre&quot; lorsque tous les succès sont débloqués</sys:String>
     <sys:String x:Key="LOCSuccessStoryListGames">Liste de jeux</sys:String>
     <sys:String x:Key="LOCSuccessStoryDefaultSorting">Tri par défaut de la liste des jeux</sys:String>
     <sys:String x:Key="LOCSuccessStoryChartWithAllAchievements">Graphique avec tous les succès</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryListGamesFields">Sélectionner les éléments à afficher :</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGamesIcon100Percent">Icône succès à 100%</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGamesIcon100Percent">Icône de succès 100%</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryIncludeHiddenGames">Montrer les succès des jeux cachés</sys:String>
     <sys:String x:Key="LOCSuccessStoryAllUnlockedByMonth">Afficher le graphique des succès par mois</sys:String>
@@ -91,14 +133,14 @@
     <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Réinitialise et télécharge les succès des jeux installés. (Utiliser s'il y a un problème avec les réalisations)</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshAllDataToolTip" xml:space="preserve">Réinitialise et télécharge les réalisations de tous les jeux. (Utiliser s'il y a un problème avec les accomplissements)</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryEnableImageCache">Activer la mise en cache des images des succès (expérimental) *</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableImageCacheToolTip" xml:space="preserve">Processus expérimental non bloquant, qui peut augmenter l'utilisation de la mémoire un peu lors de la mise en cache seulement.
-Particulièrement utile pour les réalisations Xbox avec leurs grandes images qui sont réduites lors de la mise en cache.</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableImageCache">Enable caching achievements images *</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableImageCacheToolTip" xml:space="preserve">Non-blocking process which can increase memory usage a bit when caching only.
+Especially useful for Xbox achievements with their larges images which are reduced when caching.</sys:String>
 
     <!-- SuccessStoryOneGameView -->
 
-    <sys:String x:Key="LOCSuccessStoryUserStats">Statistiques utilisateur</sys:String>
-    
+    <sys:String x:Key="LOCSuccessStoryUserStats">Statistiques de l'utilisateur</sys:String>
+
     <!-- SuccessStoryView -->
 
     <!-- UI -->
@@ -110,12 +152,22 @@ Particulièrement utile pour les réalisations Xbox avec leurs grandes images qu
 
     <!-- ListViewGames -->
 
-    <sys:String x:Key="LOCSuccessStorylvGamesProgression">Progression</sys:String>
+    <sys:String x:Key="LOCSuccessStorylvGamesProgression">Progrès</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryGraphicTitleALL">Tous les succès obtenus par mois</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitleALLDay">Tous les succès obtenus par jour</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitle">Succès obtenus par mois</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitleSources">Succès obtenus par sources</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitleDay">Succès obtenus par jour</sys:String>
+
+    <!-- ListViewGames -->
+
+    <sys:String x:Key="LOCSsOverwatchQuickPlay">Jeu Rapide</sys:String>
+    <sys:String x:Key="LOCSsOverwatchCompetitivePlay">Jeu Compétitif</sys:String>
+
+    <sys:String x:Key="LOCSsOverwatchGamesWon">{0} parties gagnées</sys:String>
+    
+    <sys:String x:Key="LOCSsOverwatchTopHero">Meilleur Héros</sys:String>
+    <sys:String x:Key="LOCSsOverwatchCareerStats">Statistiques de carrière</sys:String>
 
 </ResourceDictionary>
