--- a/source/Localization/pl_PL.xaml
+++ b/source/Localization/pl_PL.xaml
@@ -1,44 +1,77 @@
 ﻿<?xml version="1.0"?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
+    <sys:String x:Key="LOCSuccessStoryProgress">Postęp</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEarned">Zdobyte</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryManualAchievements">Ręczne osiągnięcia</sys:String>
+    
+    <sys:String x:Key="LOCSuccessStoryHiddenTrophy">Hidden Trophy</sys:String>
+    
     <!-- MainView -->
 
     <sys:String x:Key="LOCSuccessStory">Historia sukcesu</sys:String>
     <sys:String x:Key="LOCSuccessStoryAchievements">Osiągnięcia</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRetroAchievements">RetroAchievements</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryViewGames">Zobacz osiągnięcia w grach</sys:String>
     <sys:String x:Key="LOCSuccessStoryViewGame">Zobacz osiągnięcia w grze</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryIgnored">Ignored the game</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotIgnored">Not Ignored the game</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamPrivate">Profil Steam nie jest publiczny</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamDisabled">Steam jest włączony w SuccessStory ale rozszerzenie biblioteki zostało wyłączone w Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsSteamBadConfig">Steam nie został poprawnie skonfigurowany w ustawieniach</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsGogDisabled">GOG jest włączony w SuccessStory ale rozszerzenie biblioteki zostało wyłączone w Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsGogNoAuthenticate">Użytkownik GOG nie jest uwierzytelniony</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsPsnDisabled">PSN is enabled in SuccessStory but the library extension has been disabled in Playnite</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsPsnNoAuthenticate">PSN user is not authenticated</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsOriginDisabled">Origin jest włączony w SuccessStory ale rozszerzenie biblioteki zostało wyłączone w Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsOriginNoAuthenticate">Użytkownik Origin nie jest uwierzytelniony</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsXboxDisabled">Xbox jest włączony w SuccessStory ale rozszerzenie biblioteki zostało wyłączone w Playnite</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsXboxNotAuthenticate">Użytkownik Xbox nie jest uwierzytelniony</sys:String>
     <sys:String x:Key="LOCSuccessStoryNotificationsRetroAchievementsBadConfig">RetroAchievements nie został poprawnie skonfigurowany w ustawieniach</sys:String>
-    <sys:String x:Key="LOCSuccessStoryNotificationsRpcs3BadConfig">Rpcs3 has not been correctly configured in settings</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsRpcs3BadConfig">Program RPCS3 nie został poprawnie skonfigurowany w ustawieniach</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetDisabled">Battle.net jest włączony w SuccessStory, ale rozszerzenie biblioteki zostało wyłączone w Playnite</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetNoAuthenticate">Użytkownik Battle.net nie jest uwierzytelniony</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetNoAuthenticateOverwatch">Battle.net Overwatch user is not authenticated</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNotificationsBattleNetNoAuthenticateSc2">Battle.net StarCraft II user is not authenticated</sys:String>
 
+    <!-- SuccessStoreGameSelection -->
+
+    <sys:String x:Key="LOCSuccessStoryAchievementsCount">Liczba osiągnięć</sys:String>
+    
+    
     <!-- SuccessStorySettingsView -->
 
     <sys:String x:Key="LOCSuccessStoryProgressBar">Przetwarzanie, proszę czekać...</sys:String>
 
+    <sys:String x:Key="LOCSuccessStoryIgnoredGames">Ignored games</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryExophaseOnlyLocalised">Exophase (only to have localised achievements)</sys:String>
+
+    <sys:String x:Key="LOSuccessStoryAddTagDescription">Dodaj tag do gier z czasem do pełnego odblokowania</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryEnablePSN">Enable PSN achievements</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableSteam">Włącz osiągnięcia Steam</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableGog">Włącz osiągnięcia GOG</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableOrigin">Włącz osiągnięcia Origin</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableXbox">Włącz osiągnięcia Xbox</sys:String>
     <sys:String x:Key="LOCSuccessStoryEnableRetroAchievements">Włącz osiągnięcia RetroAchievements</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableRpcs3Achievements">Enable Rpcs3 achievements</sys:String>
-    
-    <sys:String x:Key="LOCSuccessStoryEnableRpcs3HomeFolder">Home user folder</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRpcs3Achievements">Włącz osiągnięcia RPCS3</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableManualAchievements">Włącz ręczne osiągnięcia</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableOverwatchAchievements">Włącz osiągnięcia Overwatch</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableSc2Achievements">Enable StarCraft II achievements</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Pokaż oddzielny widok dla osiągnięć RetroAchievements</sys:String>
+    <sys:String x:Key="LOCSuccessStorySteamNoApi">Wyłącz wykorzystanie API (Używaj, gdy nie masz klucza API)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRpcs3HomeFolder">Katalog domowy użytkownika</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryDatabase">Database</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRetroAchievementsView">Show separate view for RetroAchievements</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryDatabase">Baza danych</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetData">Pobierz dane o osiągnięciach</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshData">Resetuj dane osiągnięć</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshData">Refresh data</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetMissing">Pobierz brakujące dane</sys:String>
     <sys:String x:Key="LOCSuccessStoryGetDataRecent">Ostatnie gry z brakującymi danymi</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecent">Ostatnie gry</sys:String>
@@ -47,12 +80,15 @@
     <sys:String x:Key="LOCSuccessStoryGetDataInstalled">Zainstalowane gry z brakującymi danymi</sys:String>
     <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecent">Zainstalowane gry</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Pokaż wykres</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievements">Pokaż listę osiągnięć</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationViewItemWithProgressBar">Postęp w pasku postępu</sys:String>
+    
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowGraphic">Wyświetl wykres osiągnięć</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievements">Wyświetl listę osiągnięć</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompact">Wyświetl kompaktową listę osiągnięć</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationShowProgressBar">Pokaż pasek postępu osiągnięć</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked">Pokaż podsumowanie odblokowanych osiągnięć</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactLocked">Pokaż podsumowanie zablokowanych osiągnięć</sys:String>
-    <sys:String x:Key="LOCSuccessStoryIntegrationShowUserStats">Show user game stats</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked">Wyświetl podsumowanie odblokowanych osiągnięć</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowAchievementsCompactLocked">Wyświetl podsumowanie zablokowanych osiągnięć</sys:String>
+    <sys:String x:Key="LOCSuccessStoryIntegrationShowUserStats">Wyświetl statystyki gry użytkownika</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptions">Opcje wykresu</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationGraphicOptionsCountAbscissa">Liczba dni wyświetlanych na wykresie</sys:String>
@@ -63,9 +99,15 @@
     <sys:String x:Key="LOCSuccessStoryIntegrationProgressBarShowPercent">Pokaż procent postępu</sys:String>
     <sys:String x:Key="LOCSuccessStoryIntegrationListOptions">Opcje listy osiągnięć</sys:String>
 
+    <sys:String x:Key="LOCSuccessStoryAchievementsCompactListOptions">Opcje kompaktowej listy osiągnięć</sys:String>
+    <sys:String x:Key="LOCSuccessStoryAchievementsCompactOptions">Opcje podsumowania osiągnięć</sys:String>
+
+    <sys:String x:Key="LOCSuccessStoryIntegrationCompactPartialDisplayLastest">Pokaż najnowsze odblokowane osiągnięcie</sys:String>
+
     <sys:String x:Key="LOCSuccessStoryViewsSettings">Widok rozszerzenia</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableRaretyIndicator">Pokaż wskaźnik rzadkości przy osiągnięciu</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableOneGameView">Only display the selected game with plugin actions</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableRaretyIndicator">Pokaż wskaźnik rzadkości przy osiągnięciach</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableOneGameView">Wyświetlaj jedynie osiągnięcia gry wybranej z menu</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableAuto100PercentCompleted">Automatycznie oznacz grę jako &quot;Ukończoną&quot;, gdy wszystkie osiągnięcia zostaną odblokowane</sys:String>
     <sys:String x:Key="LOCSuccessStoryListGames">Lista gier</sys:String>
     <sys:String x:Key="LOCSuccessStoryDefaultSorting">Domyślne sortowanie listy gier</sys:String>
     <sys:String x:Key="LOCSuccessStoryChartWithAllAchievements">Wykres ze wszystkimi osiągnięciami</sys:String>
@@ -77,44 +119,54 @@
     <sys:String x:Key="LOCSuccessStoryAllUnlockedByMonth">Pokaż wykres osiągnięć według miesiąca</sys:String>
     <sys:String x:Key="LOCSuccessStoryGameUnlockedByMonth">Pokaż wykres osiągnięć według dnia</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryRefreshDataMessage">Achievements database of selection has been reset.</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataMessage">Baza danych osiągnięć dla wybranej pozycji została zresetowana.</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryGetMissingToolTip" xml:space="preserve">Downloads missing games achievements.</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Resets and downloads achievements for all games from this source. (Use if there is any problem with achievements)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetMissingToolTip" xml:space="preserve">Pobiera brakujące osiągnięcia w grach.</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich gier z tego źródła. (Skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryGetDataRecentToolTip" xml:space="preserve">Downloads achievements for games that were imported in the last month with missing achievements data. (Use if the first number count is different to the total count)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetDataInstalledToolTip" xml:space="preserve">Downloads achievements for installed games with missing achievements data. (Use if the first number count is different to the total count)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGetAllDataToolTip" xml:space="preserve">Downloads achievements for installed games with missing achievements data. (Use if the first number count is different to the total count)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataRecentToolTip" xml:space="preserve">Pobiera osiągnięcia dla gier, które zostały zaimportowane w ostatnim miesiącu z brakującymi danymi. (Użyj jeśli pierwsza wartość licznika różni się od łącznej)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetDataInstalledToolTip" xml:space="preserve">Pobiera osiągnięcia dla zainstalowanych gier z brakującymi danymi. (Użyj jeśli pierwsza wartość licznika różni się od łącznej)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGetAllDataToolTip" xml:space="preserve">Pobiera osiągnięcia dla zainstalowanych gier z brakującymi danymi. (Użyj jeśli pierwsza wartość licznika różni się od łącznej)</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Resets and downloads achievements of games that were imported in the last month. (Use if there is any problem with achievements)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Resets and downloads achievements of installed games. (Use if there is any problem with achievements)</sys:String>
-    <sys:String x:Key="LOCSuccessStoryRefreshAllDataToolTip" xml:space="preserve">Resets and downloads achievements of all games. (Use if there is any problem with achievements)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataRecentToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla gier, które zostały zaimportowane w ostatnim miesiącu. (Skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshDataInstalledRecentToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla zainstalowanych gier. (Skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
+    <sys:String x:Key="LOCSuccessStoryRefreshAllDataToolTip" xml:space="preserve">Resetuje i pobiera osiągnięcia dla wszystkich gier. (Skorzystaj z tego, jeżeli są problemy z osiągnięciami)</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryEnableImageCache">Enable caching achievements images (experimental) *</sys:String>
-    <sys:String x:Key="LOCSuccessStoryEnableImageCacheToolTip" xml:space="preserve">Experimental non-blocking process which can increase memory usage a bit when caching only.
-Especially useful for Xbox achievements  with their larges images which are reduced when caching.</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableImageCache">Enable caching achievements images *</sys:String>
+    <sys:String x:Key="LOCSuccessStoryEnableImageCacheToolTip" xml:space="preserve">Non-blocking process which can increase memory usage a bit when caching only.
+Especially useful for Xbox achievements with their larges images which are reduced when caching.</sys:String>
 
     <!-- SuccessStoryOneGameView -->
 
-    <sys:String x:Key="LOCSuccessStoryUserStats">User statistiques</sys:String>
-    
+    <sys:String x:Key="LOCSuccessStoryUserStats">Statystyki użytkownika</sys:String>
+
     <!-- SuccessStoryView -->
 
     <!-- UI -->
 
     <sys:String x:Key="LOCSuccessStoryFilterSource">Filtruj wg źródła</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGlobalProgression">Global achievements progression</sys:String>
-    <sys:String x:Key="LOCSuccessStoryProgressionLaunched">Achievements Progression of launched games</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGlobalProgression">Globalny postęp osiągnięć</sys:String>
+    <sys:String x:Key="LOCSuccessStoryProgressionLaunched">Postęp w osiągnięciach uruchomionych gier</sys:String>
     <sys:String x:Key="LOCSuccessStoryGameInformation">Informacja</sys:String>
 
     <!-- ListViewGames -->
 
     <sys:String x:Key="LOCSuccessStorylvGamesProgression">Postęp</sys:String>
 
-    <sys:String x:Key="LOCSuccessStoryGraphicTitleALL">Wszystkie odblokowane osiągnięcia według miesiąca</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitleALL">Wszystkie odblokowane osiągnięcia wg msc.</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitleALLDay">Wszystkie odblokowane osiągnięcia według dnia</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitle">Odblokowane osiągnięcia według miesiąca</sys:String>
-    <sys:String x:Key="LOCSuccessStoryGraphicTitleSources">Achievements unlocked by source</sys:String>
+    <sys:String x:Key="LOCSuccessStoryGraphicTitleSources">Odblokowane osiągnięcia wg źródła</sys:String>
     <sys:String x:Key="LOCSuccessStoryGraphicTitleDay">Odblokowane osiągnięcia według dnia</sys:String>
+
+    <!-- ListViewGames -->
+
+    <sys:String x:Key="LOCSsOverwatchQuickPlay">Szybka gra</sys:String>
+    <sys:String x:Key="LOCSsOverwatchCompetitivePlay">Rywalizacja</sys:String>
+
+    <sys:String x:Key="LOCSsOverwatchGamesWon">{0} wygranych gier</sys:String>
+    
+    <sys:String x:Key="LOCSsOverwatchTopHero">Najlepszy Bohater</sys:String>
+    <sys:String x:Key="LOCSsOverwatchCareerStats">Statystyki kariery</sys:String>
 
 </ResourceDictionary>
