added refresh estimate time for manual achievements

--- a/source/Localization/LocSource.xaml
+++ b/source/Localization/LocSource.xaml
@@ -9,6 +9,7 @@
     <sys:String x:Key="LOCSuccessStoryHiddenTrophy">Hidden Trophy</sys:String>
 
     <sys:String x:Key="LOCSsRefreshRaretyManual">Refresh rarety for manual achievements</sys:String>
+    <sys:String x:Key="LOCSsRefreshEstimateTimeManual">Refresh estimate time for manual achievements</sys:String>
     
     <!-- MainView -->
 
